using UnityEngine;

public class TagManager : MonoBehaviour

{


    public const string Player_Tag = "Player";

    public const string Attack_1_Trigger = "attack1";

    public const string Attack_2_Trigger = "attack2";

    public const string Attack_3_Trigger = "attack3";

    public const string Attack_4_Trigger = "attack4";

    public const string Attack_5_Trigger = "attack5";

    public const string Idle_Trigger = "idle";

    public const string Hit_Trigger = "hit";
}
